Fix header alignment issue

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -380,7 +380,6 @@ font header .navbar-default .navbar-nav li a:hover {
 #global-header .block {
   color: #E3E3E4;
   margin: 0 auto;
-  padding-left: 90px;
   text-align: center;
 }
 #global-header .block h1 {
@@ -630,7 +629,6 @@ font header .navbar-default .navbar-nav li a:hover {
   color: #E3E3E4;
 
   margin: 0 auto;
-  padding-left: 90px;
 }
 #slider-contact .block h1 {
   font-family: 'Roboto', sans-serif;
